--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "lucia-adapter-surrealdb",
   "version": "0.9.0",
   "description": "Surrealdb adapter for Lucia",
-  "main": "index.js",
-  "types": "index.d.ts",
-  "module": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "module": "dist/index.js",
   "type": "module",
   "files": [
     "**/*"
   ],
   "scripts": {
+    "build": "shx rm -rf ./dist/* && tsc",
     "test.surreal": "tsx tests/surrealdb2.ts",
-    "build": "rm -rf ./dist/* && cp ./package.json ./dist && cp ./README.md ./dist && cp .npmignore dist && tsc && esno package.ts",
     "test-main": "esno test/index.ts",
     "package": "pnpm build && cd dist && pnpm install --no-frozen-lockfile && pnpm publish --no-git-checks --access public --registry=https://registry.npmjs.com && cd ../",
     "format": "prettier --plugin-search-dir . --write ."
@@ -25,7 +25,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/pilcrowOnPaper/lucia"
+    "url": "https://github.com/var-che/lucia-adapter-surrealdb"
   },
   "author": "var-che",
   "license": "MIT",
@@ -37,6 +37,7 @@
     "surrealdb.js": "^0.11.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@cloudflare/workers-types": "^4.20230518.0",
     "@libsql/client": "^0.3.0",
     "@lucia-auth/adapter-test": "^5.0.0",
@@ -46,9 +47,9 @@
     "bun-types": "^1.0.12",
     "dotenv": "^16.0.3",
     "esno": "^4.0.0",
+    "lucia": "3.x",
     "shx": "^0.3.4",
     "surrealdb.js": "^0.11.0",
-    "tsx": "^3.12.6",
-    "lucia": "3.x"
+    "tsx": "^3.12.6"
   }
 }
