compilation is changed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
-    "strict": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "target": "ES2022",
-    "outDir": "./dist",
-    "declaration": true,
-    "skipLibCheck": true,
-
-    "noImplicitAny": true,
-    "allowSyntheticDefaultImports": true
+      "strict": true,
+      "noImplicitAny": true,
+      "esModuleInterop": true,
+      "strictNullChecks": true,
+      "target": "ES2022",
+      "moduleResolution": "Node10",
+      "module": "CommonJS",
+      "declaration": true,
+      "isolatedModules": true,
+      "noEmit": true,
+      "outDir": "dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules/", "**/*.test.ts"]
+  "exclude": ["node_modules/",  "**/*.test.ts"]
 }
