--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "lucia-adapter-surrealdb",
-  "version": "0.9.1",
-  "description": "Surrealdb adapter for Lucia",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "module": "dist/index.js",
+  "version": "0.9.3",
+  "description": "Unofficial Surrealdb adapter for Lucia",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.cjs",
   "type": "module",
   "files": [
     "**/*"
   ],
   "scripts": {
-    "build": "shx rm -rf ./dist/* && tsc",
+    "build": "tsup",
     "test.surreal": "tsx tests/surrealdb2.ts",
-    "test-main": "esno test/index.ts",
-    "package": "pnpm build && cd dist && pnpm install --no-frozen-lockfile && pnpm publish --no-git-checks --access public --registry=https://registry.npmjs.com && cd ../",
     "format": "prettier --plugin-search-dir . --write ."
   },
   "keywords": [
@@ -50,6 +48,8 @@
     "lucia": "3.x",
     "shx": "^0.3.4",
     "surrealdb.js": "^0.11.0",
-    "tsx": "^3.12.6"
+    "tsup": "^8.0.1",
+    "tsx": "^3.12.6",
+    "typescript": "^5.3.3"
   }
 }
